objects/Candidate__c.object
<CustomObject><fields>
        <fullName>Current_Job__c</fullName>
        <label>Current Job</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Hometown__c</fullName>
        <label>Hometown</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Max_Donations__c</fullName>
        <label>Max_Donations</label>
        <summarizedField>Donation__c.Donation_Amount__c</summarizedField>
        <summaryForeignKey>Donation__c.Candidate__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Targeted_Political_Office__c</fullName>
        <label>Targeted Political Office</label>
        <length>100</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Candidate</label><nameField>
        <label>Candiate Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Candidates</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>